[gd_scene load_steps=11 format=3 uid="uid://bhmdima85kn5g"]

[ext_resource type="MeshLibrary" uid="uid://hml6tfvqal35" path="res://3dAssets/MeshLibraries/geometry_mesh_lib.tres" id="1_t3or0"]
[ext_resource type="PackedScene" uid="uid://d0od72qwppq6e" path="res://Battle/unit_manager.tscn" id="1_ysn8j"]
[ext_resource type="PackedScene" uid="uid://drwct8g02fyi7" path="res://Scenes/player.tscn" id="2_ysn8j"]
[ext_resource type="PackedScene" uid="uid://d4nc47pri16hg" path="res://Scenes/ground_cursor.tscn" id="3_6ll4n"]
[ext_resource type="MeshLibrary" uid="uid://chvd04isqgidu" path="res://3dAssets/MeshLibraries/tile_mesh_lib.tres" id="4_kylad"]
[ext_resource type="Script" uid="uid://chim21g82hxay" path="res://scripts/tile_grid_map.gd" id="5_bdlbp"]
[ext_resource type="Script" uid="uid://04nqipoq2qq5" path="res://Scenes/path_manager.gd" id="6_2h8qs"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_folls"]
sky_top_color = Color(0.31324, 0.440968, 0.704448, 1)
sky_horizon_color = Color(0.787415, 0.807251, 0.859091, 1)
ground_bottom_color = Color(0.354086, 0.305704, 0.249584, 1)
ground_horizon_color = Color(0.787415, 0.807251, 0.859091, 1)

[sub_resource type="Sky" id="Sky_3vk6h"]
sky_material = SubResource("ProceduralSkyMaterial_folls")

[sub_resource type="Environment" id="Environment_xdvni"]
background_mode = 2
sky = SubResource("Sky_3vk6h")
tonemap_mode = 2

[node name="Level1Root" type="Node3D"]

[node name="UnitManager" parent="." instance=ExtResource("1_ysn8j")]
unique_name_in_owner = true

[node name="Player" parent="UnitManager" instance=ExtResource("2_ysn8j")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="Player2" parent="UnitManager" instance=ExtResource("2_ysn8j")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)
current_health = 50

[node name="PathManager" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("6_2h8qs")

[node name="TileGridMap" type="GridMap" parent="PathManager"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
mesh_library = ExtResource("4_kylad")
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PackedInt32Array(0, 0, 1048576, 0, 1, 1048576, 0, 2, 1048576, 0, 3, 1048576, 0, 4, 1048576, 0, 5, 1048576, 0, 6, 1048576, 0, 7, 1048576, 0, 8, 1048576, 0, 9, 1048576, 1, 0, 1048576, 1, 1, 1048576, 1, 2, 1048576, 1, 3, 1048576, 1, 4, 1048576, 1, 5, 1048576, 1, 6, 1048576, 1, 7, 1048576, 1, 8, 1048576, 1, 9, 1048576, 2, 0, 1048576, 2, 1, 1048576, 2, 2, 1048576, 2, 3, 1048576, 2, 4, 1048576, 2, 5, 1048576, 2, 6, 1048576, 2, 7, 1048576, 2, 8, 1048576, 2, 9, 1048576, 3, 0, 1048576, 3, 1, 1048576, 3, 2, 1048576, 3, 3, 1048576, 3, 4, 1048576, 3, 5, 1048576, 3, 6, 1048576, 3, 7, 1048576, 3, 8, 1048576, 3, 9, 1048576, 4, 0, 1048576, 4, 1, 1048576, 4, 2, 1048576, 4, 3, 1048576, 4, 4, 1048576, 4, 5, 1048576, 4, 6, 1048576, 4, 7, 1048576, 4, 8, 1048576, 4, 9, 1048576, 5, 0, 1048576, 5, 1, 1048576, 5, 2, 1048576, 5, 3, 1048576, 5, 4, 1048576, 5, 5, 1048576, 5, 6, 1048576, 5, 7, 1048576, 5, 8, 1048576, 5, 9, 1048576, 6, 0, 1048576, 6, 1, 1048576, 6, 2, 1048576, 6, 3, 1048576, 6, 4, 1048576, 6, 5, 1048576, 6, 6, 1048576, 6, 7, 1048576, 6, 8, 1048576, 6, 9, 1048576, 7, 0, 1048576, 7, 1, 1048576, 7, 2, 1048576, 7, 3, 1048576, 7, 4, 1048576, 7, 5, 1048576, 7, 6, 1048576, 7, 7, 1048576, 7, 8, 1048576, 7, 9, 1048576, 8, 0, 1048576, 8, 1, 1048576, 8, 2, 1048576, 8, 3, 1048576, 8, 4, 1048576, 8, 5, 1048576, 8, 6, 1048576, 8, 7, 1048576, 8, 8, 1048576, 8, 9, 1048576, 9, 0, 1048576, 9, 1, 1048576, 9, 2, 1048576, 9, 3, 1048576, 9, 4, 1048576, 9, 5, 1048576, 9, 6, 1048576, 9, 7, 1048576, 9, 8, 1048576, 9, 9, 1048576)
}
script = ExtResource("5_bdlbp")
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="GeometryGridMap" type="GridMap" parent="PathManager"]
unique_name_in_owner = true
mesh_library = ExtResource("1_t3or0")
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PackedInt32Array(-65536, 0, 0, -65536, 1, 0, -65536, 2, 0, -65536, 3, 0, -65536, 4, 0, -65536, 5, 0, -65536, 6, 0, -65536, 7, 0, -65536, 8, 0, -65536, 9, 0, -65535, 0, 0, -65535, 1, 0, -65535, 2, 0, -65535, 3, 0, -65535, 4, 0, -65535, 5, 0, -65535, 6, 0, -65535, 7, 0, -65535, 8, 0, -65535, 9, 0, -65534, 0, 0, -65534, 1, 0, -65534, 2, 0, -65534, 3, 0, -65534, 4, 0, -65534, 5, 0, -65534, 6, 0, -65534, 7, 0, -65534, 8, 0, -65534, 9, 0, -65533, 0, 0, -65533, 1, 0, -65533, 2, 0, -65533, 3, 0, -65533, 4, 0, -65533, 5, 0, -65533, 6, 0, -65533, 7, 0, -65533, 8, 0, -65533, 9, 0, -65532, 0, 0, -65532, 1, 0, -65532, 2, 0, -65532, 3, 0, -65532, 4, 0, -65532, 5, 0, -65532, 6, 0, -65532, 7, 0, -65532, 8, 0, -65532, 9, 0, -65531, 0, 0, -65531, 1, 0, -65531, 2, 0, -65531, 3, 0, -65531, 4, 0, -65531, 5, 0, -65531, 6, 0, -65531, 7, 0, -65531, 8, 0, -65531, 9, 0, -65530, 0, 0, -65530, 1, 0, -65530, 2, 0, -65530, 3, 0, -65530, 4, 0, -65530, 5, 0, -65530, 6, 0, -65530, 7, 0, -65530, 8, 0, -65530, 9, 0, -65529, 0, 0, -65529, 1, 0, -65529, 2, 0, -65529, 3, 0, -65529, 4, 0, -65529, 5, 0, -65529, 6, 0, -65529, 7, 0, -65529, 8, 0, -65529, 9, 0, -65528, 0, 0, -65528, 1, 0, -65528, 2, 0, -65528, 3, 0, -65528, 4, 0, -65528, 5, 0, -65528, 6, 0, -65528, 7, 0, -65528, 8, 0, -65528, 9, 0, -65527, 0, 0, -65527, 1, 0, -65527, 2, 0, -65527, 3, 0, -65527, 4, 0, -65527, 5, 0, -65527, 6, 0, -65527, 7, 0, -65527, 8, 0, -65527, 9, 0, -65534, 65532, 0, -65535, 65532, 0, -65535, 65533, 0, -65534, 65533, 0)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xdvni")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 12, 0)
shadow_enabled = true

[node name="GroundCursor" parent="." instance=ExtResource("3_6ll4n")]
unique_name_in_owner = true

[connection signal="calculated_route" from="PathManager" to="UnitManager/Player" method="receive_route"]
[connection signal="get_route" from="GroundCursor" to="PathManager" method="_on_ground_cursor_get_route"]
